# geant4-novnc-docker

./: .gitignore  Dockerfile  README.md  custom_theme.css  custom_ui.html  docker-compose.yml  entrypoint.sh
workspace/optical_detector/: CMakeLists.txt  analyze_hits.py  optical_detector.cc  run.mac  start.sh  vis.mac
workspace/optical_detector/include/: DetectorConstruction.hh  PhotocathodeSD.hh  PrimaryGeneratorAction.hh
workspace/optical_detector/scripts/: analyze_hits.py  auto_launcher.py  combine_data.py
workspace/optical_detector/src/: ActionInitialization.cc  DetectorConstruction.cc  PhotocathodeSD.cc  PrimaryGeneratorAction.cc  RunAction.cc
